# joco_svelte_template

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  cargo.toml  components.json  compose.example.yaml  package-lock.json  package.json  pnpm-lock.yaml  run.sh  svelte.config.js  tailwind.config.js  vite.config.ts
.sqlx/: query-1e4b8dc4fbeae3ca127e1a00ffea124fd0df3cc57c5798184cca924af7e64543.json  query-26b803ccbb64adda6daa39c1c60fbb8fc30fd6a565a9c765ccf2ba107a17b7c9.json  query-2892b4e54752a95144704d234d6b11f4033b72db44b66aee3e088a7d74eb8a87.json  query-3d9c83dea0d1c20888a79658532cdfe1287eb18b29860be30b1e998f2c1a2c4f.json  query-3ffccf306c40105f6e9a9fe4d8a28cf4f8ab79d07a115db51ef18baad761d6bf.json  query-59ad3dddfd51a5a36294c175486cf558ad45832b2ccb47ec90b429dc13d71282.json  query-62610613a80a9e75a1aebacdf666b1013100fc004c334de6f7c2c69758237ef0.json  query-64ffbe709bdf593ef7283050e349b838333d8ceb87e86ef01784a618c16d1ce8.json  (+6 more)
api/: Cargo.toml  Dockerfile
api-lib/: Cargo.toml
api-lib/src/: env.rs  lib.rs
api-lib/src/db/: dbrange.rs  mod.rs
api-lib/src/handshake/: endpoint.rs  mod.rs
api-proc/: Cargo.toml
api-proc/src/: lib.rs
apitwo/: Cargo.toml
apitwo/migrations/: 1_init.sql
apitwo/src/: env.rs  errors.rs  main.rs
apitwo/src/handshake/: mod.rs
apitwo/src/middleware/: jwt.rs  mod.rs
apitwo/src/model/: mod.rs  permissions.rs  user.rs
apitwo/src/routes/: auth.rs  mod.rs  permission.rs
apitwo/src/routes/user/: mod.rs  user_permissions.rs
apitwo/src/routes/users/: mod.rs
apitwo/src/seeders/: mod.rs
(+168 files in other folders)
