[package]
name = "api-proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.49", features = ["fold"] }
quote = "1.0.35"
ts-rs = "7.1.1"
proc-macro2 = "1.0.78"

[lib]
proc-macro = true