[package]
name = "apitwo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", features = ["postgres", "chrono", "uuid", "macros", "runtime-tokio-native-tls"] }
actix-web = "4.5.1"
serde = { version = "1.0.196", features = ["derive"] }
chrono = { version = "0.4.33", features = ["serde"]}
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = ["serde"] }
env_logger = "0.11.1"
futures-util = "0.3.30"
headers = "0.4.0"
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"